clusters/talos-proxmox-cluster/Traefik/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    app: traefik
